# sqlalchemy-training

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: e85801fcd680_seed_data.py  f7f9b27c05a2_change_products_and_users.py  fb4f978c2275_initial_migration.py
sqlalchemy_training/: lesson_1.py  lesson_2.py  lesson_3.py  seed.py
src/: lesson_1.py  lesson_2.py
