[project]
name = "sqlalchemy-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "alembic",
]

[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "faker>=40.1.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

# Ruff
[tool.ruff]
line-length = 88
exclude = [".git", ".venv", "uv.lock"]
target-version = "py312"
select = [
    "I",
]

# Pylint
[tool.pylint.MAIN]
ignore = [".venv"]
ignore-paths = ["alembic"]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-few-public-methods",
    "invalid-name",
    "not-callable",
    "too-many-arguments",
    "unsubscriptable-object",
]
